--- a/discussion/app/views/fragments/commentsBody.scala.html
+++ b/discussion/app/views/fragments/commentsBody.scala.html
@@ -1,7 +1,9 @@
 @(page: CommentPage)(implicit request: RequestHeader)
 
-<ul class="d-thread">
-    @page.comments.map{ comment =>
-        @fragments.commentThread(comment)
-    }
-</ul>
+<div class="d-discussion">
+	<ul class="d-thread">
+	    @page.comments.map{ comment =>
+	        @fragments.commentThread(comment)
+	    }
+	</ul>
+</div>
