Report link is grey

--- a/common/app/assets/stylesheets/module/_discussion.scss
+++ b/common/app/assets/stylesheets/module/_discussion.scss
@@ -256,3 +256,10 @@
         border-color: transparent #F5644F;
     }
 }
+
+.d-comment__action--report {
+    &:link,
+    &:visited {
+        color: #767676;
+    }
+}
