--- a/common/app/assets/stylesheets/module/_discussion.scss
+++ b/common/app/assets/stylesheets/module/_discussion.scss
@@ -1,6 +1,7 @@
 .d-discussion {
     font-size: 14px;
     font-size: 1.4rem;
+    max-width: 600px; // Cap the number of words per line for readability
 }
 
 
@@ -91,6 +92,10 @@
 }
 
 @media (min-width: 768px) {
+    .d-comment__avatar {
+        width: 60px;
+        height: 60px;
+    }
     .d-comment__author {
         font-size: 1.28571428571em;
     }
@@ -115,10 +120,15 @@
     word-wrap: break-word;
     line-height: 1.4;
 
+    @media (min-width: 768px) {
+        line-height: 22px;
+    }
+
     p {
-        margin-bottom: 1em;
+        margin-bottom: 12px;
     }
     blockquote {
+        margin-top: 0;
         margin-left: 0;
         margin-right: 0;
         padding-left: 14px;
@@ -129,8 +139,8 @@
             // Override article styles
             color: #767676;
             font-family: $sans-serif;
-            font-size: 1em;
-            line-height: 1.4;
+            font-size: inherit;
+            line-height: inherit;
         }
     }
 }
@@ -194,7 +204,8 @@
 }
 
 .d-comment__actions {
-    margin-top: 8px; /* Compensate missing space in case the comment does not end with a paragraph */
+    margin-top: 12px; /* Compensate missing space in case the comment does not end with a paragraph */
+    margin-bottom: 4px;
 }
 
 .d-comment__action {
@@ -241,10 +252,10 @@
     position: relative;
     display: inline-block;
     background: #F5644F;
-    padding: .1em .3em;
+    padding: .4em .6em .3em;
     border-radius: 4px;
     text-align: center;
-    font: normal 16px/1.3 "EgyptianText",georgia,serif;
+    font: normal 14px/1 "EgyptianText",georgia,serif;
     color: white;
     text-decoration: none;
 
