--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -12,68 +12,72 @@
 
 .i-close-x { background-position: -88px -8px; width: 14.5px; height: 14.5px; }
 
-.i-date { background-position: -102px -8px; width: 10px; height: 10px; }
+.i-comment-count-bubble { background-position: -102px -8px; width: 36px; height: 27.188px; }
 
-.i-default-witness-avatar { background-position: -112px -8px; width: 32px; height: 32px; }
+.i-date { background-position: -138px -8px; width: 10px; height: 10px; }
 
-.i-ee-add-button { background-position: -144px -8px; width: 54px; height: 47px; }
+.i-default-witness-avatar { background-position: -148px -8px; width: 32px; height: 32px; }
 
-.i-fb { background-position: -212px -8px; width: 10.88px; height: 22.38px; }
+.i-ee-add-button { background-position: -180px -8px; width: 54px; height: 47px; }
 
-.i-filter-arrow-down { background-position: -222px -8px; width: 20px; height: 11.431px; }
+.i-fb { background-position: -247px -8px; width: 10.88px; height: 22.38px; }
 
-.i-filter-arrow-left { background-position: -242px -8px; width: 8.703px; height: 15px; }
+.i-filter-arrow-down { background-position: -257px -8px; width: 20px; height: 11.431px; }
 
-.i-filter-arrow-right { background-position: -250px -8px; width: 8.702px; height: 15px; }
+.i-filter-arrow-left { background-position: -277px -8px; width: 8.703px; height: 15px; }
 
-.i-filter-arrow-up { background-position: -258px -8px; width: 20px; height: 11.431px; }
+.i-filter-arrow-right { background-position: -285px -8px; width: 8.702px; height: 15px; }
 
-.i-fullscreen-toggle { background-position: -278px -8px; width: 12px; height: 12px; }
+.i-filter-arrow-up { background-position: -293px -8px; width: 20px; height: 11.431px; }
 
-.i-gplus { background-position: -290px -8px; width: 24.361px; height: 20.535px; }
+.i-fullscreen-toggle { background-position: -313px -8px; width: 12px; height: 12px; }
 
-.i-guardian-logo { background-position: -314px -8px; width: 107.667px; height: 20.125px; }
+.i-gplus { background-position: -325px -8px; width: 24.361px; height: 20.535px; }
 
-.i-image-inverted { background-position: -421px -8px; width: 12px; height: 9px; }
+.i-guardian-logo { background-position: -349px -8px; width: 107.667px; height: 20.125px; }
 
-.i-image-white { background-position: -433px -8px; width: 12px; height: 9px; }
+.i-guardian-picks { background-position: -456px -8px; width: 15px; height: 46.624px; }
 
-.i-image { background-position: -445px -8px; width: 12px; height: 9px; }
+.i-image-inverted { background-position: -471px -8px; width: 12px; height: 9px; }
 
-.i-livequote-after { background-position: -457px -8px; width: 37px; height: 20px; }
+.i-image-white { background-position: -483px -8px; width: 12px; height: 9px; }
 
-.i-livequote-before { background-position: -494px -8px; width: 37px; height: 20px; }
+.i-image { background-position: -495px -8px; width: 12px; height: 9px; }
 
-.i-menu-active { background-position: -531px -8px; width: 18px; height: 12px; }
+.i-livequote-after { background-position: -507px -8px; width: 37px; height: 20px; }
 
-.i-menu { background-position: -549px -8px; width: 18px; height: 12px; }
+.i-livequote-before { background-position: -544px -8px; width: 37px; height: 20px; }
 
-.i-more-arrow { background-position: -567px -8px; width: 10px; height: 8px; }
+.i-menu-active { background-position: -471px -28px; width: 18px; height: 12px; }
 
-.i-powered-by-ee { background-position: -222px -28px; width: 68px; height: 31px; }
+.i-menu { background-position: -489px -28px; width: 18px; height: 12px; }
 
-.i-quote-marks { background-position: -304px -28px; width: 64px; height: 32px; }
+.i-more-arrow { background-position: -507px -28px; width: 10px; height: 8px; }
 
-.i-red-card { background-position: -382px -28px; width: 9px; height: 12px; }
+.i-powered-by-ee { background-position: -507px -36px; width: 68px; height: 31px; }
 
-.i-search-blue { background-position: -391px -28px; width: 14px; height: 14px; }
+.i-quote-marks { background-position: -8px -72px; width: 64px; height: 32px; }
 
-.i-search { background-position: -405px -28px; width: 14px; height: 14px; }
+.i-red-card { background-position: -85px -72px; width: 9px; height: 12px; }
 
-.i-sport-arrow-small { background-position: -419px -28px; width: 5.802px; height: 10px; }
+.i-search-blue { background-position: -94px -72px; width: 14px; height: 14px; }
 
-.i-sport-arrow { background-position: -424px -28px; width: 8.703px; height: 15px; }
+.i-search { background-position: -108px -72px; width: 14px; height: 14px; }
 
-.i-story-quote { background-position: -432px -28px; width: 49px; height: 25px; }
+.i-sport-arrow-small { background-position: -122px -72px; width: 5.802px; height: 10px; }
 
-.i-tool { background-position: -481px -28px; width: 13px; height: 13px; }
+.i-sport-arrow { background-position: -127px -72px; width: 8.703px; height: 15px; }
 
-.i-top-stories-active { background-position: -494px -28px; width: 16px; height: 16px; }
+.i-story-quote { background-position: -135px -72px; width: 49px; height: 25px; }
 
-.i-top-stories { background-position: -510px -28px; width: 16px; height: 16px; }
+.i-tool { background-position: -184px -72px; width: 13px; height: 13px; }
 
-.i-twitter { background-position: -526px -28px; width: 25px; height: 20px; }
+.i-top-stories-active { background-position: -197px -72px; width: 16px; height: 16px; }
 
-.i-witness-logo { background-position: -382px -53px; width: 119px; height: 16px; }
+.i-top-stories { background-position: -213px -72px; width: 16px; height: 16px; }
 
-.i-yellow-card { background-position: -501px -53px; width: 9px; height: 12px; }
+.i-twitter { background-position: -229px -72px; width: 25px; height: 20px; }
+
+.i-witness-logo { background-position: -254px -72px; width: 119px; height: 16px; }
+
+.i-yellow-card { background-position: -373px -72px; width: 9px; height: 12px; }
