--- a/style-guide/app/views/styleGuide/fragments/sprites.scala.html
+++ b/style-guide/app/views/styleGuide/fragments/sprites.scala.html
@@ -4,6 +4,7 @@
 <tr><td class="type-9">.i-arrow-small-up</td><td class="sprite-cell"><i class="i i-arrow-small-up"></i></td></tr>
 <tr><td class="type-9">.i-arrow-white-down</td><td class="sprite-cell"><i class="i i-arrow-white-down"></i></td></tr>
 <tr><td class="type-9">.i-close-x</td><td class="sprite-cell"><i class="i i-close-x"></i></td></tr>
+<tr><td class="type-9">.i-comment-count-bubble</td><td class="sprite-cell"><i class="i i-comment-count-bubble"></i></td></tr>
 <tr><td class="type-9">.i-date</td><td class="sprite-cell"><i class="i i-date"></i></td></tr>
 <tr><td class="type-9">.i-default-witness-avatar</td><td class="sprite-cell"><i class="i i-default-witness-avatar"></i></td></tr>
 <tr><td class="type-9">.i-ee-add-button</td><td class="sprite-cell"><i class="i i-ee-add-button"></i></td></tr>
@@ -15,6 +16,7 @@
 <tr><td class="type-9">.i-fullscreen-toggle</td><td class="sprite-cell"><i class="i i-fullscreen-toggle"></i></td></tr>
 <tr><td class="type-9">.i-gplus</td><td class="sprite-cell"><i class="i i-gplus"></i></td></tr>
 <tr><td class="type-9">.i-guardian-logo</td><td class="sprite-cell"><i class="i i-guardian-logo"></i></td></tr>
+<tr><td class="type-9">.i-guardian-picks</td><td class="sprite-cell"><i class="i i-guardian-picks"></i></td></tr>
 <tr><td class="type-9">.i-image-inverted</td><td class="sprite-cell"><i class="i i-image-inverted"></i></td></tr>
 <tr><td class="type-9">.i-image-white</td><td class="sprite-cell"><i class="i i-image-white"></i></td></tr>
 <tr><td class="type-9">.i-image</td><td class="sprite-cell"><i class="i i-image"></i></td></tr>
