--- a/discussion/app/views/fragments/comment.scala.html
+++ b/discussion/app/views/fragments/comment.scala.html
@@ -44,7 +44,7 @@
     </div>
 
     @if(comment.responses.nonEmpty){
-        <ul class="d-thread">
+        <ul class="d-thread" data-responses="@comment.responses.length">
             @comment.responses.map{ response =>
                 @fragments.comment(response, true)
             }
