Adding padding to article body

--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -56,7 +56,7 @@
 }
 
 .article-body {
-    padding: 0 $gutter $baseline*2 $gutter;
+    padding: $baseline*2 $gutter $baseline*2 $gutter;
 }
 
 .gu-video {
