--- a/event/app/views/fragments/storyThumbnailTrail.scala.html
+++ b/event/app/views/fragments/storyThumbnailTrail.scala.html
@@ -12,12 +12,12 @@
         </a>
         }
 
-        <h2 class="media-body trail-headline type-5">
+        <h2 class="media-body trail__headline type-5">
             <a href="/stories/@story.id" data-link-name="@info.rowNum | text">
                 @RemoveOuterParaHtml(story.title)
             </a>
         </h2>
 
-        <!-- @story.explainer.map { text => <div class="trail-text">@cleanTrailText(text)</div> } -->
+        <!-- @story.explainer.map { text => <div class="trail__text">@cleanTrailText(text)</div> } -->
     </div>
 </li>
