Added a pagination link to the non-JS discussion view.

--- a/discussion/app/views/comments.scala.html
+++ b/discussion/app/views/comments.scala.html
@@ -13,4 +13,8 @@
 
     @fragments.commentsBody(page)
 
+    @if(page.currentPage + 1 <= page.pages){
+      <a href="/@page.id?page=@(page.currentPage + 1)">Next page</a>
+    }
+
 }
