--- a/common/app/assets/stylesheets/module/nav/_pop-up.scss
+++ b/common/app/assets/stylesheets/module/nav/_pop-up.scss
@@ -3,7 +3,8 @@
    ========================================================================== */
 
 .nav-popup {
-    //position: absolute;
+    position: absolute;
+    top: 58px;
     clear: both;
     z-index: 100;
     padding: $baseline*2 0;
@@ -12,15 +13,7 @@
     border-bottom: $baseline solid $blue;
     //@include transform(translateZ(0));
     background: #ffffff;
-    //width: 100%;
-
-    @media only screen and (min-width: $tablet) {
-        top: 118px;
-    }
-
-    @media only screen and (min-width: $desktopAd) {
-        top: 155px;
-    }
+    width: 100%;
 }
 
 .nav-popup .nav--section-divider {
@@ -40,7 +33,7 @@
 
     @media only screen and (min-width: $tablet) {
         position: absolute;
-        top: 174px;
+        top: 102px;
         right: 0;
         width: auto;
         padding: 0;
@@ -50,14 +43,10 @@
         border-left: 2px solid $darkMushroom;
     }
 
-    @media only screen and (min-width: $desktopAd) {
-        top: 200px;
-    }
-
     .nav__item {
         @media only screen and (min-width: $tablet) {
             margin: 0 $gutter;
-            border-bottom: 1px solid #C3C3C3;
+            border-bottom: 1px solid $darkMushroom;
             text-align: right;
 
             &:last-child {
