--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -56,3 +56,18 @@
     width: auto;
     max-width: $inArticleInlineImgWidth;
 }
+
+
+/*
+     Ajax loading helpers
+     ========================================================================== */
+
+.preload-msg {
+    padding: 50px 50px 250px 50px;
+    text-align: center;
+}
+
+.preload-msg .is-updating {
+    display: block;
+    margin: 10px auto;
+}
