--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -58,6 +58,9 @@
 
 @if(article.isCommentable) {
     <div class="article__discussion"></div>
+    <a class="d-show-cta js-show-discussion" href="/discussion/@article.shortUrlId">
+        View all comments <span class="d-commentcount speech-bubble"></span>
+    </a>
 }
 
 @if(storyPackage.nonEmpty) {
