--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -57,7 +57,7 @@
 
 @if(article.isCommentable) {
     <div class="article__discussion"></div>
-    <a class="d-show-cta js-show-discussion js-top" href="/discussion/@article.shortUrlId">
+    <a class="d-show-cta js-show-discussion js-top" href="/discussion/@article.shortUrlId" data-link-name="View all comments">
         View all comments <span class="d-commentcount speech-bubble"></span>
     </a>
 }
