Fix h class. Remove border.

--- a/common/app/assets/stylesheets/base/_helpers.scss
+++ b/common/app/assets/stylesheets/base/_helpers.scss
@@ -31,7 +31,7 @@
     margin: -1px;
     overflow: hidden;
     padding: 0;
-    position: absolute;
+    position: absolute !important;
     width: 1px;
 }
 
