Number of comments in speech bubble is aligned vertically

--- a/common/app/assets/stylesheets/module/_discussion.scss
+++ b/common/app/assets/stylesheets/module/_discussion.scss
@@ -303,7 +303,7 @@
     border: 0;
     border-radius: 4px;
     text-align: center;
-    font: normal 14px/1 $serif;
+    font: normal 14px/1 Times, "Times New Roman", serif;
     color: white;
     text-decoration: none;
 }
