--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -54,7 +54,7 @@
 .article .main-image {
     margin-bottom: 0;
 }
-
+.article__discussion,
 .article-body {
     padding: $baseline*2 $gutter $baseline*2 $gutter;
 }
@@ -68,8 +68,4 @@ video {
     max-width: 100%;
     height: auto;
     @include user-select;
-}
-
-.article__discussion {
-    margin: 0 $gutter;
 }
