--- a/common/app/views/fragments/img.scala.html
+++ b/common/app/views/fragments/img.scala.html
@@ -1,6 +1,6 @@
 @(mainPicture: Image, smallCrop: Image)
 
-<figure itemprop="associatedMedia primaryImageOfPage" itemscope itemtype="http://schema.org/ImageObject">
+<figure itemprop="associatedMedia primaryImageOfPage" itemscope itemtype="http://schema.org/ImageObject" class="media-primary">
     <img class="maxed main-image" src="@smallCrop.path"
         data-force-upgrade="true"
         data-thumb-width="@smallCrop.width"
