--- a/common/app/assets/stylesheets/head.scss
+++ b/common/app/assets/stylesheets/head.scss
@@ -26,6 +26,7 @@
 @import "module/trails/_trail";
 @import "module/media";
 @import "module/_article";
+@import "module/experiments/_article-breakpoints";
 @import "module/_headers";
 
 //External modules
