Added discussion ID to trail model

--- a/common/app/views/fragments/trailblocks/thumbnail.scala.html
+++ b/common/app/views/fragments/trailblocks/thumbnail.scala.html
@@ -1,9 +1,15 @@
 @(trails: Seq[Trail], numItemsVisible: Int = 5, related: Boolean = false, numThumbnails: Int = 5, headingLevel: Int = 2)(implicit request: RequestHeader)
 
 <ul class="unstyled">
+
+
+    dsfsfsdfsdfsdfsdf
     @trails.take(numItemsVisible).zipWithRowInfo.map{ case (trail, info) =>
         <li class="trail"
-            data-link-name="trail">
+            data-link-name="trail"
+
+            @trail.discussionId.map{ id => data-discussion-id="@id" }
+                >
             @fragments.trails.thumbnail(trail, info.rowNum, related, showThumbnail = (info.rowNum <= numThumbnails), headingLevel = headingLevel)
         </li>
     }
